战斗界面的背景和战斗角色的图元各搞一半

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -4,6 +4,7 @@ project(V1 LANGUAGES CXX)
 find_package(Qt6 6.5 REQUIRED COMPONENTS Core Widgets)
 find_package(Qt6 REQUIRED COMPONENTS Widgets)
 find_package(Qt6 REQUIRED COMPONENTS Core)
+find_package(Qt6 REQUIRED COMPONENTS Core)
 
 qt_standard_project_setup()
 
@@ -25,6 +26,9 @@ qt_add_executable(V1
     model/character.h model/character.cpp
     model/characterstate.h model/characterstate.cpp
     controller/scenecontroller.h controller/scenecontroller.cpp
+    view/battle.h view/battle.cpp
+    view/fighter.h view/fighter.cpp
+
 )
 
 target_link_libraries(V1
@@ -34,6 +38,7 @@ target_link_libraries(V1
 )
 
 target_link_libraries(V1 PRIVATE Qt6::Widgets)
+target_link_libraries(V1 PRIVATE Qt6::Core)
 target_link_libraries(V1 PRIVATE Qt6::Core)
 
 
