--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -4,6 +4,7 @@ project(V1 LANGUAGES CXX)
 find_package(Qt6 6.5 REQUIRED COMPONENTS Core Widgets)
 find_package(Qt6 REQUIRED COMPONENTS Widgets)
 find_package(Qt6 REQUIRED COMPONENTS Core)
+find_package(Qt6 REQUIRED COMPONENTS Core)
 
 qt_standard_project_setup()
 
@@ -21,10 +22,12 @@ qt_add_executable(V1
     view/menu.h view/menu.cpp view/menu.ui
     src.qrc
     view/cast.h view/cast.cpp view/cast.ui
-    view/roleselection.h view/roleselection.cpp view/roleselection.ui
+
     model/character.h model/character.cpp
     model/characterstate.h model/characterstate.cpp
     controller/scenecontroller.h controller/scenecontroller.cpp
+    model/scenestate.h model/scenestate.cpp
+    common/pageindex.h
 )
 
 target_link_libraries(V1
@@ -34,6 +37,7 @@ target_link_libraries(V1
 )
 
 target_link_libraries(V1 PRIVATE Qt6::Widgets)
+target_link_libraries(V1 PRIVATE Qt6::Core)
 target_link_libraries(V1 PRIVATE Qt6::Core)
 
 
