添加了cast页面的信号传递和fighter的动画槽函数

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -30,6 +30,7 @@ qt_add_executable(V1
     common/pageindex.h
     view/battle.h view/battle.cpp
     view/fighter.h view/fighter.cpp
+    view/role.h view/role.cpp view/role.ui
 )
 
 target_link_libraries(V1
