--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -6,6 +6,8 @@ find_package(Qt6 REQUIRED COMPONENTS Widgets)
 find_package(Qt6 REQUIRED COMPONENTS Core)
 find_package(Qt6 REQUIRED COMPONENTS Core)
 find_package(Qt6 REQUIRED COMPONENTS Core)
+find_package(Qt6 REQUIRED COMPONENTS Core)
+find_package(Qt6 REQUIRED COMPONENTS Core)
 
 qt_standard_project_setup()
 
@@ -31,8 +33,11 @@ qt_add_executable(V1
     view/battle.h view/battle.cpp
     view/fighter.h view/fighter.cpp
     view/role.h view/role.cpp view/role.ui
-    controller/fightercontroller.h controller/fightercontroller.cpp
+
     view/settlement.h view/settlement.cpp view/settlement.ui
+    app/app.h app/app.cpp
+
+
 )
 
 target_link_libraries(V1
@@ -42,6 +47,8 @@ target_link_libraries(V1
 )
 
 target_link_libraries(V1 PRIVATE Qt6::Widgets)
+target_link_libraries(V1 PRIVATE Qt6::Core)
+target_link_libraries(V1 PRIVATE Qt6::Core)
 target_link_libraries(V1 PRIVATE Qt6::Core)
 target_link_libraries(V1 PRIVATE Qt6::Core)
 target_link_libraries(V1 PRIVATE Qt6::Core)
