角色可以切换左右 且附加了血量值

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -8,6 +8,7 @@ find_package(Qt6 REQUIRED COMPONENTS Core)
 find_package(Qt6 REQUIRED COMPONENTS Core)
 find_package(Qt6 REQUIRED COMPONENTS Core)
 find_package(Qt6 REQUIRED COMPONENTS Core)
+find_package(Qt6 REQUIRED COMPONENTS Core)
 
 qt_standard_project_setup()
 
@@ -36,6 +37,7 @@ qt_add_executable(V1
 
     view/settlement.h view/settlement.cpp view/settlement.ui
     app/app.h app/app.cpp
+    view/showhealth.h view/showhealth.cpp
 
 
 )
@@ -47,6 +49,7 @@ target_link_libraries(V1
 )
 
 target_link_libraries(V1 PRIVATE Qt6::Widgets)
+target_link_libraries(V1 PRIVATE Qt6::Core)
 target_link_libraries(V1 PRIVATE Qt6::Core)
 target_link_libraries(V1 PRIVATE Qt6::Core)
 target_link_libraries(V1 PRIVATE Qt6::Core)
