--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,12 +3,7 @@ project(V1 LANGUAGES CXX)
 
 find_package(Qt6 6.5 REQUIRED COMPONENTS Core Widgets)
 find_package(Qt6 REQUIRED COMPONENTS Widgets)
-find_package(Qt6 REQUIRED COMPONENTS Core)
-find_package(Qt6 REQUIRED COMPONENTS Core)
-find_package(Qt6 REQUIRED COMPONENTS Core)
-find_package(Qt6 REQUIRED COMPONENTS Core)
-find_package(Qt6 REQUIRED COMPONENTS Core)
-find_package(Qt6 REQUIRED COMPONENTS Core)
+find_package(Qt6 REQUIRED COMPONENTS MultimediaWidgets)
 
 qt_standard_project_setup()
 
@@ -39,6 +34,7 @@ qt_add_executable(V1
     app/app.h app/app.cpp
     view/showhealth.h view/showhealth.cpp
     model/topmodel.h model/topmodel.cpp
+    view/bgmplayer.h view/bgmplayer.cpp
 )
 
 target_link_libraries(V1
@@ -46,14 +42,7 @@ target_link_libraries(V1
         Qt::Core
         Qt::Widgets
 )
-
-target_link_libraries(V1 PRIVATE Qt6::Widgets)
-target_link_libraries(V1 PRIVATE Qt6::Core)
-target_link_libraries(V1 PRIVATE Qt6::Core)
-target_link_libraries(V1 PRIVATE Qt6::Core)
-target_link_libraries(V1 PRIVATE Qt6::Core)
-target_link_libraries(V1 PRIVATE Qt6::Core)
-target_link_libraries(V1 PRIVATE Qt6::Core)
+target_link_libraries(V1 PUBLIC Qt::MultimediaWidgets)
 
 
 include(GNUInstallDirs)
