--- a/.github/workflows/qt-test.yml
+++ b/.github/workflows/qt-test.yml
@@ -19,7 +19,7 @@ jobs:
       with:
         version: '6.5.0'
         arch: 'x64'
-        modules: 'qtcharts qtmultimedia qtmultimediawidgets'
+        modules: 'qtmultimediawidgets'
         
     - name: Install dependencies
       run: |
