--- a/.github/workflows/qt-test.yml
+++ b/.github/workflows/qt-test.yml
@@ -17,9 +17,9 @@ jobs:
     - name: Setup Qt
       uses: jurplel/install-qt-action@v3
       with:
-        version: '6.5.0'
+        version: '6.4.3'
         arch: 'x64'
-        modules: 'qtmultimedia'
+        modules: 'qtbase qtmultimedia qttest'
         
     - name: Install dependencies
       run: |
