--- a/.github/workflows/qt-test.yml
+++ b/.github/workflows/qt-test.yml
@@ -27,7 +27,7 @@ jobs:
     - name: List available Qt modules
       run: |
         echo "Listing available Qt modules for 6.4.3 x64..."
-        python3 -m aqt list-qt linux desktop --modules 6.4.3 x64
+        python3 -m aqt list-qt linux desktop 6.4.3 --arch x64
     
     - name: Setup Qt
       uses: jurplel/install-qt-action@v3
