--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,51 +1,41 @@
-name: Build Qt Project with MinGW
+name: Build with Qt6 Multimedia (MinGW) on Windows
 
-on:
-  push:
-    branches: [ main ]
-  pull_request:
-    branches: [ main ]
+on: [push]
 
 jobs:
   build:
     runs-on: windows-latest
 
     steps:
-    - uses: actions/checkout@v4
+    - name: Checkout code
+      uses: actions/checkout@v3
 
-    # 安装 Ninja 构建工具
-    - name: Install Ninja
-      run: choco install ninja
+    - name: Download Qt Online Installer
+      run: |
+        curl -L https://download.qt.io/official_releases/online_installers/qt-unified-windows-x86_64-online.exe -o qt-installer.exe
 
-    # 安装 MinGW
-    - name: Install MinGW
-      run: choco install mingw
+    - name: Write Qt install script (qt-install.qs)
+      run: |
+        echo function Controller() { installer.autoAcceptLicenses(); } > qt-install.qs
+        echo function ComponentSelectionPageCallback() { >> qt-install.qs
+        echo var widget = gui.pageWidgetByObjectName("ComponentSelectionPage"); >> qt-install.qs
+        echo widget.deselectAll(); >> qt-install.qs
+        echo widget.selectComponent("qt.qt6.65.win64_mingw81"); >> qt-install.qs
+        echo widget.selectComponent("qt.qt6.65.qt.multimedia.win64_mingw81"); >> qt-install.qs
+        echo } >> qt-install.qs
 
-    # 设置环境变量（让后续命令能找到 MinGW）
-    - name: Add MinGW to PATH
+    - name: Run Qt Installer silently
+      run: |
+        .\qt-installer.exe --script qt-install.qs --verbose
+
+    - name: Add Qt to PATH
       shell: powershell
-      run: echo "C:\\tools\\mingw64\\bin" | Out-File -FilePath $env:GITHUB_PATH -Encoding utf8 -Append
+      run: |
+        $env:PATH += ";C:\Qt\6.5.2\mingw81_64\bin"
+        Write-Output $env:PATH
 
+    - name: Configure project with CMake
+      run: cmake -S . -B build -G Ninja -DCMAKE_PREFIX_PATH="C:/Qt/6.5.2/mingw81_64/lib/cmake"
 
-    # 安装 Qt（MinGW版，整包）
-    - name: Install Qt (MinGW)
-      uses: jurplel/install-qt-action@v3
-      with:
-        version: '6.5.2'
-        target: desktop
-        arch: win64_mingw
-        # 不写 modules，安装完整包
-
-    # CMake 配置，使用 Ninja 和 MinGW
-    - name: Configure with CMake and Ninja
-      run: cmake -S . -B build -G Ninja
-
-    # 构建
-    - name: Build with Ninja
-      run: cmake --build build --parallel
-
-    # 上传构建产物（可选）
-    - uses: actions/upload-artifact@v4
-      with:
-        name: mingw-qt-build
-        path: build/
+    - name: Build project
+      run: cmake --build build
