--- a/.github/workflows/qt-test.yml
+++ b/.github/workflows/qt-test.yml
@@ -20,6 +20,7 @@ jobs:
           version: 6.6.3
           modules: 'qtbase qtmultimedia qttools'
           cache: true
+          target: 'desktop'
 
       - name: Install system dependencies
         run: |
