--- a/.github/workflows/qt-test.yml
+++ b/.github/workflows/qt-test.yml
@@ -15,23 +15,29 @@ jobs:
         uses: actions/checkout@v3
 
       - name: Install Qt 6.6.3 with Multimedia and Tools
+        id: qt
         uses: jurplel/install-qt-action@v2
         with:
-          version: 6.6.3
+          version: '6.6.3'
           modules: 'qtbase qtmultimedia qttools'
-          cache: true
           target: 'desktop'
+          cache: true
 
       - name: Install system dependencies
         run: |
           sudo apt-get update
           sudo apt-get install -y build-essential cmake ninja-build
 
+      - name: List installed Qt modules
+        run: ls $HOME/Qt/6.6.3/gcc_64/lib/cmake/
+
       - name: Configure CMake project
         run: |
           mkdir -p build
           cd build
-          cmake .. -G Ninja -DCMAKE_BUILD_TYPE=Release -DCMAKE_PREFIX_PATH="${Qt6_DIR}"
+          cmake .. -G Ninja \
+            -DCMAKE_BUILD_TYPE=Release \
+            -DCMAKE_PREFIX_PATH="$HOME/Qt/6.6.3/gcc_64"
 
       - name: Build entire project
         run: |
